--- a/recipes/fluffyfrenchtoast.html
+++ b/recipes/fluffyfrenchtoast.html
@@ -9,5 +9,11 @@
 
 <body>
     <h1>Fluffy French Toast</h1>
+    <img src="../images/betterfrenchtoast.jpg" alt="Delicious french toast topped with butter, syrup, blueberries and strawberries">
+
+    <h3>Description</h3>
+
+    <p>This French toast recipe is different because it uses flour. My friends and family love it!</p>
+
 </body>
 </html>
