--- a/recipes/fluffyfrenchtoast.html
+++ b/recipes/fluffyfrenchtoast.html
@@ -27,6 +27,7 @@
         <li>12 thick slices bread</li>
     </ul>
 
+    <h3>Steps</h3>
     <ol>
         <li>Measure flour into a large mixing bowl. Slowly whisk in the milk. Whisk in the salt, eggs, cinnamon, vanilla extract and sugar until smooth.</li>
         <li>Heat a lightly oiled griddle or frying pan over medium heat.</li>
