--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 
     <a href="./recipes/fluffyfrenchtoast.html">Fluffy French Toast</a>
 
+    <img src="../images/femalecook.jpg" alt="black female cooking in a kitchen">
+
 </body>
 </html>
