--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Odin Recipes</title>
 </head>
 <body>
+   
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/fluffyfrenchtoast.html">Fluffy French Toast</a>
+    <img src="images/femalecook.jpg" alt="black female cooking in a kitchen">
+   
+    <h3>Breakfast to Die For</h3>
 
-    <img src="../images/femalecook.jpg" alt="black female cooking in a kitchen">
+    <a href="./recipes/fluffyfrenchtoast.html">Fluffy French Toast</a>
 
 </body>
 </html>
