Replicate this page like the first one

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
    
     <h3>Breakfast to Die For</h3>
 
-    <a href="./recipes/fluffyfrenchtoast.html">Fluffy French Toast</a>
-
+    <ul>
+    <li><a href="./recipes/fluffyfrenchtoast.html">Fluffy French Toast</a></li>
+    <li><a href="./recipes/baconandeggs.html">Bacon and Eggs Muffin</a></li>
+    </ul>
 </body>
 </html>
