Ensure link works properly
Been having trouble with the links to recipes not always working

--- a/recipes/baconandeggs.html
+++ b/recipes/baconandeggs.html
@@ -9,7 +9,36 @@
 
 <body>
     <h1>Bacon and Eggs Muffin</h1>
-    <img src="baconandeggs.jpg" alt="Bacon and Eggs Muffin">
+    <img src="../images/baconandeggs.jpg" alt="Bacon and Eggs Muffin">
 
+    <h3>Description</h3>
+        <p>It's the ring of bacon that makes these egg bites a visual standout on your brunch table. </p>
+
+    <h3>Ingredients</h3>
+        <ul>
+            <li>Cooking spray</li>
+            <li>12 slices of bacon</li>
+            <li>10 eggs</li>
+            <li>1/4 cup milk</li>
+            <li>1/4 cup chopped green onion</li>
+            <li>1/4 cup diced jalapeno pepper</li>
+            <li>1/4 cup diced roasted red pepper</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon black pepper</li>
+            <li>1/2 cup shredded Cheddar cheese</li>
+        </ul>
+    
+    <h3>Steps</h3>
+        <ol>
+            <li>Preheat oven to 375 degrees F (190 degrees C). Prepare 12 muffin cups with cooking spray.</li>
+            <li>Arrange bacon on a microwave-safe plate. Cook bacon in microwave for 75 seconds.</li>
+            <li>Place a slice of bacon into each muffin cup so that the bacon lines the edges of the cup.</li>
+            <li>Beat eggs and milk together in a bowl; ladle into muffin cups. Top 4 of the egg portions 
+                with 1 tablespoon each of the green onion, 4 with 1 tablespoon each jalapeno pepper, and 
+                4 each with 1 tablespoon roasted red pepper.</li>
+            <li>Bake in preheated oven until only slightly moist on top, about 20 minutes. Season the 
+                muffins with salt and pepper; top with Cheddar cheese. Continue baking until the cheese 
+                melts, about 5 minutes more.</li>
+        </ol>
 </body>
 </html>
