Ensure image is visible under miniscones

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul>
     <li><a href="./recipes/fluffyfrenchtoast.html">Fluffy French Toast</a></li>
     <li><a href="./recipes/baconandeggs.html">Bacon and Eggs Muffin</a></li>
+    <li><a href="./recipes/miniscones.html">Air Fryer Mini Blueberry Scones</a></li>
     </ul>
 </body>
 </html>
