Update href link

--- a/recipes/miniscones.html
+++ b/recipes/miniscones.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Air Fryer Mini Blueberry Scones</h1>
-    <img href="../images/" alt="Air Fryer Mini Blueberry Scones">
+    <img href="../images/miniscones.jpg" alt="Air Fryer Mini Blueberry Scones">
 
     <h3>Description</h3>
         <p>Mini blueberry scones sprinkled with a sugary orange topping are easy to make in your air fryer 
