--- a/recipes/fluffyfrenchtoast.html
+++ b/recipes/fluffyfrenchtoast.html
@@ -29,9 +29,9 @@
 
     <h3>Steps</h3>
     <ol>
-        <li>Measure flour into a large mixing bowl. Slowly whisk in the milk. Whisk in the salt, eggs, cinnamon, vanilla extract and sugar until smooth.</li>
-        <li>Heat a lightly oiled griddle or frying pan over medium heat.</li>
-        <li>Soak bread slices in mixture until saturated. Cook bread on each side until golden brown. Serve hot.</li>
+        <li>Measure flour into a large mixing bowl. Slowly whisk in the milk. Whisk in the salt, eggs, cinnamon, vanilla extract and sugar until smooth.</li><br>
+        <li>Heat a lightly oiled griddle or frying pan over medium heat.</li><br>
+        <li>Soak bread slices in mixture until saturated. Cook bread on each side until golden brown. Serve hot.</li><br>
     </ol>
 
 </body>
