--- a/recipes/baconandeggs.html
+++ b/recipes/baconandeggs.html
@@ -30,14 +30,14 @@
     
     <h3>Steps</h3>
         <ol>
-            <li>Preheat oven to 375 degrees F (190 degrees C). Prepare 12 muffin cups with cooking spray.</li>
-            <li>Arrange bacon on a microwave-safe plate. Cook bacon in microwave for 75 seconds.</li>
-            <li>Place a slice of bacon into each muffin cup so that the bacon lines the edges of the cup.</li>
-            <li>Beat eggs and milk together in a bowl; ladle into muffin cups. Top 4 of the egg portions 
-                with 1 tablespoon each of the green onion, 4 with 1 tablespoon each jalapeno pepper, and 
-                4 each with 1 tablespoon roasted red pepper.</li>
-            <li>Bake in preheated oven until only slightly moist on top, about 20 minutes. Season the 
-                muffins with salt and pepper; top with Cheddar cheese. Continue baking until the cheese 
+            <li>Preheat oven to 375 degrees F (190 degrees C). Prepare 12 muffin cups with cooking spray.</li><br>
+            <li>Arrange bacon on a microwave-safe plate. Cook bacon in microwave for 75 seconds.</li><br>
+            <li>Place a slice of bacon into each muffin cup so that the bacon lines the edges of the cup.</li><br>
+            <li>Beat eggs and milk together in a bowl; ladle into muffin cups. Top 4 of the egg portions <br>
+                with 1 tablespoon each of the green onion, 4 with 1 tablespoon each jalapeno pepper, and <br>
+                4 each with 1 tablespoon roasted red pepper.</li><br>
+            <li>Bake in preheated oven until only slightly moist on top, about 20 minutes. Season the <br>
+                muffins with salt and pepper; top with Cheddar cheese. Continue baking until the cheese <br>
                 melts, about 5 minutes more.</li>
         </ol>
 </body>
