--- a/recipes/miniscones.html
+++ b/recipes/miniscones.html
@@ -32,21 +32,21 @@
 
     <h3>Steps</h3>    
         <ol>
-            <li>Preheat the air fryer to 360 degrees F (180 degrees C).</li>
-            <li>Stir together flour, 2 tablespoons sugar, baking powder, baking soda, 
-                and salt in a medium bowl. Cut in butter with 2 knives or pastry blender 
-                until mixture resembles coarse crumbs.</li>
-            <li>Beat egg with a fork in a small bowl. Remove 2 tablespoons egg to another 
-                small bowl; set aside. Add buttermilk and vanilla extract to remaining egg; 
-                whisk with the fork until combined. Stir into flour mixture until just moistened. 
-                Gently stir in blueberries.</li>
-            <li>Transfer dough to a lightly floured surface. Gently knead until dough is no 
-                longer sticky, about 8 to 10 strokes. Pat dough into a 6-inch circle. Cut into 8 
-                wedges, without separating, dipping the knife in flour between cuts.</li>
-            <li>Combine remaining 2 tablespoons sugar and orange zest in a small bowl. Brush top 
-                of dough with reserved egg and sprinkle with sugar mixture. Separate dough wedges 
-                and carefully arrange them, using a small wide spatula, in a single layer in the 
-                fryer basket, in batches if necessary.</li>
+            <li>Preheat the air fryer to 360 degrees F (180 degrees C).</li><br>
+            <li>Stir together flour, 2 tablespoons sugar, baking powder, baking soda,<br> 
+                and salt in a medium bowl. Cut in butter with 2 knives or pastry blender<br>
+                until mixture resembles coarse crumbs.</li><br>
+            <li>Beat egg with a fork in a small bowl. Remove 2 tablespoons egg to another <br>
+                small bowl; set aside. Add buttermilk and vanilla extract to remaining egg; <br>
+                whisk with the fork until combined. Stir into flour mixture until just moistened. <br>
+                Gently stir in blueberries.</li><br>
+            <li>Transfer dough to a lightly floured surface. Gently knead until dough is no <br>
+                longer sticky, about 8 to 10 strokes. Pat dough into a 6-inch circle. Cut into 8 <br>
+                wedges, without separating, dipping the knife in flour between cuts.</li><br>
+            <li>Combine remaining 2 tablespoons sugar and orange zest in a small bowl. Brush top <br>
+                of dough with reserved egg and sprinkle with sugar mixture. Separate dough wedges <br>
+                and carefully arrange them, using a small wide spatula, in a single layer in the <br>
+                fryer basket, in batches if necessary.</li><br>
             <li>Cook scones until golden brown, about 6 minutes. Serve warm.</li>
         </ol>
 </body>
